Fix: header and footer alignments

--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,9 @@ body {
 }
 
 .social-logos{
-    height: 15px;
-    width: 15px;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
     filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(80deg) brightness(110%) contrast(98%);
 }
 
@@ -201,6 +202,22 @@ body {
 .fav__heart:hover {
     color: red;
 }
+
+
+/* Utilities */
+
+.text-align-left {
+    text-align: left;
+}
+
+.text-align-right {
+    text-align: right;
+}
+
+
+
+
+
 
 
 /* Debug */
